# binscan

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis_parser.c  binscan  binscan.c  capstone.c  checksum  compare.s  elf_parser.c  encrypt.c  libelf64.c  open_analysis.c  openscan.c  sha1.c
include/: analysis_parser.h  bin_proto.h  encrypt.h
proj1/: Makefile  binscan  binscan.c  binscan.txt  helloworld  libelf64.c  objdump.txt  testsha1.txt
src/: analysis_parser.c  binscan.c  elf_parser.c  encrypt.c
